--- a/styles.css
+++ b/styles.css
@@ -1100,6 +1100,10 @@ body::after {
     font-size: 14px;
 }
 
+.specialization-members {
+    font-size: 13px;
+}
+
 .achievements ul, .responsibilities ul {
     margin-top: 5px;
     padding-left: 20px;
